--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/layout :: layout(~{::title}, ~{::body})}">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>テストのページ</title>
+    <title>書籍レビュー一覧画面（の予定）</title>
 </head>
 <body>
-  <div th:text="${message}"></div>
+  <div class="mt-3">
+    <div class="flex justify-center">
+      <form class="w-2/3">
+        <label>書籍名（部分一致）：</label>
+        <input type="text" name="book_name" class="border rounded border-black w-1/3 py-1 px-2" />
+        <button class="ml-3 px-2 py-1 border rounded border-black bg-blue-300">検索</button>
+      </form>
+      <div class="w-1/3 text-right">
+        <button class="mr-3 px-2 py-1 border rounded border-black bg-green-300" id="btn-register">新規登録</button>
+      </div>
+    </div>
+    <hr class="mt-5 py-5 w-full border-bottom border-black"></hr>
+    <div>
+      <th:block th:if="${#lists.isEmpty(books)}">
+        <div class="text-center">データがありません。</div>
+      </th:block>
+      <th:block th:if="${!#lists.isEmpty(books)}">
+        <table>
+          <thead>
+            <tr>
+              <th>投稿者</th>
+              <th>本のタイトル</th>
+              <th>評価(S～E)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <th:block th:each="book : ${books}">
+              <tr>
+                <td>${book.reviewerName}</td>
+                <td>${book.bookName}</td>
+                <td>${book.evaluation}</td>
+              </tr>
+            </th:block>
+          </tbody>
+        </table>
+      </th:block>
+    </div>
+  </div>
+  <script>
+    $('#btn-register').click(function() {
+      console.log('btn押された！');
+      location.href = '/register';
+    });
+  </script>
 </body>
 </html>
