--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/layout :: layout(~{::title}, ~{::body})}">
 <head>
-    <title>書籍レビュー登録画面（の予定）</title>
+    <title>書籍レビュー登録画面</title>
 </head>
 <body>
   <div class="mt-3">
     <form action="/create" th:object="${registerForm}" method="post" enctype="multipart/form-data">
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p th:each="err : ${#fields.globalErrors()}" th:text="${err}" class="bg-red-400"></p>
+        </div>
         <div th:if="${#fields.hasAnyErrors()}">
             <p>入力エラーです</p>
-            <p th:each="err : ${#fields.allErrors()}" th:text="${err}" class="bg-red-400"></p>
+            <p th:each="err : ${#fields.allErrors()}" th:if="${!#lists.contains(#fields.globalErrors(), err)}" th:text="${err}" class="bg-red-400"></p>
+        </div>
+        <div th:if="${successMessage}">
+            <p th:text="${successMessage}" class="bg-green-400"></p>
         </div>
         <div class="py-2">
             <label class="inline-block w-32">投稿者名</label>
