--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,47 +5,155 @@
 </head>
 <body>
   <div class="mt-3">
-    <div class="flex justify-center">
-      <form class="w-2/3">
-        <label>書籍名（部分一致）：</label>
-        <input type="text" name="book_name" class="border rounded border-black w-1/3 py-1 px-2" />
-        <button class="ml-3 px-2 py-1 border rounded border-black bg-blue-300">検索</button>
+    <div class="flex justify-center items-center">
+      <form class="w-2/3 flex items-center" th:action="@{/}">
+        <label class="mr-2">書籍名（部分一致）：</label>
+        <input type="text" name="searchBookName" class="border rounded border-black w-1/3 py-1 px-2 mr-2" th:value="${searchBookName}" />
+        <input type="hidden" name="page" th:value="${reviews.pageNum}" />
+        <label class="mr-2">表示件数：</label>
+        <select name="pageSize" class="border rounded border-black py-1 px-2 mr-2">
+          <option value="30" th:selected="${reviews.pageSize == 30}">30件</option>
+          <option value="50" th:selected="${reviews.pageSize == 50}">50件</option>
+          <option value="100" th:selected="${reviews.pageSize == 100}">100件</option>
+        </select>
+        <button class="ml-5 px-4 py-1 border rounded border-black bg-blue-500 text-white hover:bg-blue-600">検索</button>
       </form>
       <div class="w-1/3 text-right">
         <button class="mr-3 px-2 py-1 border rounded border-black bg-green-300" id="btn-register">新規登録</button>
       </div>
     </div>
-    <hr class="mt-5 py-5 w-full border-bottom border-black"></hr>
+    <hr class="mt-5 py-5 w-full border-bottom border-black" />
     <div>
-      <th:block th:if="${#lists.isEmpty(books)}">
+      <th:block th:unless="${reviews != null && reviews.hasContent()}">
         <div class="text-center">データがありません。</div>
       </th:block>
-      <th:block th:if="${!#lists.isEmpty(books)}">
-        <table>
-          <thead>
-            <tr>
-              <th>投稿者</th>
-              <th>本のタイトル</th>
-              <th>評価(S～E)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <th:block th:each="book : ${books}">
-              <tr>
-                <td>${book.reviewerName}</td>
-                <td>${book.bookName}</td>
-                <td>${book.evaluation}</td>
+      <th:block th:if="${reviews != null && reviews.hasContent()}">
+        <div class="mb-16">
+          <table class="w-full border border-black border-collapse">
+            <thead>
+              <tr class="bg-gray-200">
+                <th class="border border-black px-2 py-2">投稿者</th>
+                <th class="border border-black px-2 py-2">本のタイトル</th>
+                <th class="border border-black px-2 py-2">評価(S～E)</th>
+                <th class="border border-black px-2 py-2">削除</th>
               </tr>
-            </th:block>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <tr th:each="review : ${reviews.list}" class="border border-black px-2 py-2 hover:bg-indigo-300">
+                <td th:text="${review.reviewerName}" th:data-id="${review.reviewId}" class="list border border-black px-2 py-2"></td>
+                <td th:text="${review.bookName}" th:data-id="${review.reviewId}" class="list border border-black px-2 py-2"></td>
+                <td th:text="${review.evaluation}" th:data-id="${review.reviewId}" class="list border border-black px-2 py-2"></td>
+                <td class="text-center">
+                  <th:block th:if="${review.canDelete}">
+                    <button class="delete-btn px-4 py-1 border rounded border-black bg-red-300" th:data-id="${review.reviewId}">削除</button>
+                  </th:block>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- pagenation -->
+          <div class="flex justify-center mt-5">
+            <nav aria-label="Pagination">
+              <ul class="inline-flex items-center -space-x-px rounded-md text-sm shadow-sm">
+                <!-- 前へボタン -->
+                <li>
+                  <th:block th:if="${reviews.prePage} > 0">
+                    <a th:href="@{/(page=${reviews.prePage},pageSize=${reviews.pageSize},searchBookName=${searchBookName})}"
+                       th:class="${reviews.isFirstPage} ? 'inline-flex items-center rounded-l-md border border-gray-300 bg-white px-2 py-2 font-medium text-gray-500 opacity-50' : 'inline-flex items-center rounded-l-md border border-gray-300 bg-white px-2 py-2 font-medium text-gray-500 hover:bg-gray-50'">
+                      <span class="sr-only">Previous</span>
+                      <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
+                      </svg>
+                    </a>
+                  </th:block>
+                  <th:block th:unless="${reviews.prePage} > 0">
+                    <a th:disabled="true"
+                       th:class="'inline-flex items-center rounded-l-md border border-gray-300 bg-white px-2 py-2 font-medium text-gray-500 hover:bg-gray-50'">
+                      <span class="sr-only">Previous</span>
+                      <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
+                      </svg>
+                    </a>
+                  </th:block>
+                </li>
+
+                <!-- ページ番号リンク -->
+                <li th:each="pageNum : ${#numbers.sequence(1, reviews.pages)}">
+                  <a th:href="@{/(page=${pageNum},pageSize=${reviews.pageSize},searchBookName=${searchBookName})}"
+                     th:class="${pageNum == reviews.pageNum} ? 'z-10 inline-flex items-center border border-gray-300 bg-gray-100 px-4 py-2 font-medium text-gray-700' : 'inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-gray-500 hover:bg-gray-50'"
+                     th:text="${pageNum}">
+                  </a>
+                </li>
+
+                <!-- 省略記号 -->
+                <li th:if="${reviews.pages > 5}">
+                  <span class="inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-gray-700">... </span>
+                </li>
+
+                <!-- 最後のページ番号 -->
+                <li th:if="${reviews.pages > 5}">
+                  <a th:href="@{/(page=${reviews.pages},pageSize=${reviews.pageSize},searchBookName=${searchBookName})}"
+                     class="inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-gray-500 hover:bg-gray-50"
+                     th:text="${reviews.pages}">
+                  </a>
+                </li>
+
+                <!-- 次へボタン -->
+                <li>
+                  <th:block th:if="${reviews.nextPage} > 0">
+                    <a th:href="@{/(page=${reviews.nextPage},pageSize=${reviews.pageSize},searchBookName=${searchBookName})}"
+                       th:class="${reviews.isLastPage} ? 'inline-flex items-center rounded-r-md border border-gray-300 bg-white px-2 py-2 font-medium text-gray-500 opacity-50' : 'inline-flex items-center rounded-r-md border border-gray-300 bg-white px-2 py-2 font-medium text-gray-500 hover:bg-gray-50'">
+                      <span class="sr-only">Next</span>
+                      <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                      </svg>
+                    </a>
+                  </th:block>
+                  <th:block th:unless="${reviews.nextPage} > 0">
+                    <a th:disabled="true"
+                       th:class="'inline-flex items-center rounded-r-md border border-gray-300 bg-white px-2 py-2 font-medium text-gray-500 hover:bg-gray-50'">
+                      <span class="sr-only">Next</span>
+                      <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                      </svg>
+                    </a>
+                  </th:block>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </th:block>
     </div>
   </div>
-  <script>
-    $('#btn-register').click(function() {
-      console.log('btn押された！');
-      location.href = '/register';
+  <script th:inline="javascript">
+    $(document).ready(function() {
+      $('#btn-register').click(function() {
+        location.href = '/register';
+      });
+
+      $('.delete-btn').click(function() {
+        var id = $(this).data('id');
+        if (confirm('本当に削除しますか？')) {
+          $.ajax({
+            url: '/delete/' + id,
+            type: 'POST',
+            success: function(result) {
+              // 削除成功時の処理
+              location.reload(); // ページをリロード
+            },
+            error: function(xhr, status, error) {
+              // エラー時の処理
+              alert('削除に失敗しました。');
+            }
+          });
+        }
+      });
+
+      $('.list').click(function () {
+        var id = $(this).data('id');
+        location.href = '/edit/' + id;
+      })
     });
   </script>
 </body>
