--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,3 +1,3 @@
-<div th:fragment="commonheader" class="bg-red-400 mt-5 w-full">
-  <p>ここはヘッダーだよん</p>
+<div th:fragment="commonheader" class="bg-pink-400 mt-5 w-full py-5">
+  <p class="text-2xl px-2 font-semibold italic">書籍レビュー管理</p>
 </div>
