--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/layout :: layout(~{::title}, ~{::body})}">
 <head>
-    <title>書籍レビュー登録画面</title>
+  <title>書籍レビュー登録画面</title>
 </head>
 <body>
   <div class="mt-3">
     <form action="/create" th:object="${registerForm}" method="post" enctype="multipart/form-data">
-        <div th:if="${#fields.hasGlobalErrors()}">
-            <p th:each="err : ${#fields.globalErrors()}" th:text="${err}" class="bg-red-400"></p>
+      <div th:if="${#fields.hasGlobalErrors()}">
+        <p th:each="err : ${#fields.globalErrors()}" th:text="${err}" class="bg-red-400"></p>
+      </div>
+      <div th:if="${#fields.hasAnyErrors()}">
+        <p>入力エラーです</p>
+        <p th:each="err : ${#fields.allErrors()}" th:if="${!#lists.contains(#fields.globalErrors(), err)}" th:text="${err}" class="bg-red-400"></p>
+      </div>
+      <div th:if="${successMessage}" class="fixed top-4 right-4 bg-green-500 text-white p-4 rounded shadow-lg slide-in" id="message-box">
+        <span th:text="${successMessage}"></span>
+      </div>
+      <div class="py-2">
+        <label class="inline-block w-32">投稿者名</label>
+        <input type="text" name="reviewer_name" th:field="*{reviewerName}" class="border border-black rounded px-2" />
+      </div>
+      <div class="py-2">
+        <label class="inline-block w-32">書籍名</label>
+        <input type="text" name="book_name" th:field="*{bookName}" class="border border-black rounded px-2" />
+      </div>
+      <div class="py-2 flex">
+        <div class="px-0">
+          <label class="inline-block w-32">書籍の画像</label>
         </div>
-        <div th:if="${#fields.hasAnyErrors()}">
-            <p>入力エラーです</p>
-            <p th:each="err : ${#fields.allErrors()}" th:if="${!#lists.contains(#fields.globalErrors(), err)}" th:text="${err}" class="bg-red-400"></p>
+        <div class="ml-1 flex flex-col">
+          <input type="text" name="image_url" th:field="*{imageUrl}" class="border border-black rounded px-2" />
+          <span class="mt-2">または</span>
+          <input type="file" name="image" th:field="*{image}" accept=".jpg, .png, .jpeg" class="py-2" />
         </div>
-        <div th:if="${successMessage}">
-            <p th:text="${successMessage}" class="bg-green-400"></p>
-        </div>
-        <div class="py-2">
-            <label class="inline-block w-32">投稿者名</label>
-            <input type="text" name="reviewer_name" th:field="*{reviewerName}" class="border border-black rounded px-2" />
-        </div>
-        <div class="py-2">
-            <label class="inline-block w-32">書籍名</label>
-            <input type="text" name="book_name" th:field="*{bookName}" class="border border-black rounded px-2" />
-        </div>
-        <div class="py-2 flex">
-            <div class="px-0">
-                <label class="inline-block w-32">書籍の画像</label>
-            </div>
-            <div class="ml-1 flex flex-col">
-                <input type="text" name="image_url" th:field="*{imageUrl}" class="border border-black rounded px-2" />
-                <span class="mt-2">または</span>
-                <input type="file" name="image" th:field="*{image}" accept=".jpg, .png, .jpeg" class="py-2" />
-            </div>
-        </div>
-        <div class="py-2">
-            <label class="inline-block w-32">評価</label>
-            <select name="evaluation" th:field="*{evaluation}" class="border rounded py-1 px-2 border-black">
-                <option th:value="S">S</option>
-                <option th:value="A">A</option>
-                <option th:value="B">B</option>
-                <option th:value="C">C</option>
-                <option th:value="D">D</option>
-                <option th:value="E">E</option>
-            </select>
-        </div>
-        <div class="py-2">
-            <label class="inline-block w-32 align-top">レビュー内容</label>
-            <textarea name="content" th:field="*{content}" class="w-1/3 h-[200px] border-2 border-black"></textarea>
-        </div>
-        <div class="py-2 text-center">
-            <button class="px-3 py-1 border rounded border-black bg-yellow-200">登録する</button>
-        </div>
+      </div>
+      <div class="py-2">
+        <label class="inline-block w-32">評価</label>
+        <select name="evaluation" th:field="*{evaluation}" class="border rounded py-1 px-2 border-black">
+          <option th:value="S">S</option>
+          <option th:value="A">A</option>
+          <option th:value="B">B</option>
+          <option th:value="C">C</option>
+          <option th:value="D">D</option>
+          <option th:value="E">E</option>
+        </select>
+      </div>
+      <div class="py-2">
+        <label class="inline-block w-32 align-top">レビュー内容</label>
+        <textarea name="content" th:field="*{content}" class="w-1/3 h-[200px] border-2 border-black"></textarea>
+      </div>
+      <div class="py-2 text-center">
+        <button class="px-3 py-1 border rounded border-black bg-yellow-200">登録する</button>
+        <button class="ml-3 px-3 py-1 border rounded border-black bg-gray-300" id="backToList">一覧へ戻る</button>
+      </div>
+      <input type="hidden" name="review_id" th:field="*{reviewId}" />
     </form>
   </div>
+  <script th:inline="javascript">
+      $("#backToList").on('click', function () {
+          location.href = '/';
+          return false;
+      });
+
+      /*<![CDATA[*/
+      window.onload = function() {
+          var messageBox = document.getElementById('message-box');
+          if (messageBox) {
+              setTimeout(function() {
+                  messageBox.style.display = 'none';
+              }, 3000);
+          }
+      }
+      /*]]>*/
+  </script>
 </body>
 </html>
